# tue_robocup

./:   .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  azure-pipelines.yml  item_categories.txt  items.txt  location_categories.txt  locations.txt  mainpage.dox  manifest.xml  open_door.sh  package.xml  resolvements_to_id.txt  run_executive_standalone.launch  sergio.yaml.backup  setup.py  stack.xml  states_used.txt  tue-manifest.xml
amigo_demo/: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
amigo_demo/dictionaries/: en.yaml  en_extended.yaml  nl.yaml  nl_extended.yaml
amigo_demo/launch/: demo_exec.launch  demo_exec_dependencies.launch
amigo_demo/src/: contextmanagers.py  decorators.py  demo_executioner.py  demo_maxima_2016.py  drive_to_person.py  egpsr_speech_demo.py  transporter.py
amigo_skills/: CMakeLists.txt  package.xml  setup.py
amigo_skills/test/: test_amigo.py  test_amigo.test
challenge_basic_functionalities/: CMakeLists.txt  README  mainpage.dox  manifest.xml  package.xml
challenge_basic_functionalities/test/: test_fetch_and_carry_simulator.py  test_what_did_you_say.py
challenge_carry_my_luggage/: CMakeLists.txt  README.md  package.xml  setup.py
challenge_carry_my_luggage/scripts/: carry_my_luggage  challenge_carry_my_luggage  node_killer.bash
challenge_carry_my_luggage/test/: test_construction.py
challenge_cleanup/: CMakeLists.txt  README  README.md  Resolution_info.txt  log_20130628_2250.txt  manifest.xml  package.xml  setup.py
challenge_cleanup/launch/: clean_up_aux.launch
challenge_cleanup/scripts/: challenge_cleanup
challenge_cleanup/src/: clean_up.py  knowledge_debugger.py
challenge_cleanup/test/: test_construction.py  testenv_robotics_testlab_A.py  testenv_rwc2013.py
challenge_cocktail_party/: CMakeLists.txt  README  README_OLD  changes_to_cocktail.txt  mainpage.dox  manifest.xml  outcome_rgo2014.txt  package.xml
challenge_cocktail_party/launch/: aux.launch  start.launch
challenge_cocktail_party/parameters/: fake_perception.yaml
challenge_cocktail_party/prolog/: cocktail_party.pl  init.pl  objects.pl  tester.pl
challenge_cocktail_party/scripts/: scenario1.py  scenario2.py  tester
challenge_cocktail_party/src/: cocktail_party.py  cocktail_party2.py  cocktail_party_bt.py  cocktail_party_maxima.py  cocktail_party_prolog.py  cocktail_party_rgo2014.py  cocktail_party_smach.py  cocktail_party_v2.py
challenge_cocktail_party/test/: scenario2.py  scenario3.py  scenario4.py  scenario5.py  test_fast_simulator.py  test_maxima.py  testenv_robotics_testlab_A.py
challenge_demo/: CMakeLists.txt  ElevatorPitch.odt  IDEAS  README  README.md  TODO  index.html  mainpage.dox  manifest.xml  package.xml  setup.py
challenge_demo/doc/: demo_2013_opt2.txt
challenge_demo/gui/: objects.html
challenge_demo/launch/: config.rviz  external_kinect.launch  laser.launch  object_segmentation.launch  ppl_detection.launch  rviz.launch  server.launch  server_dev.launch  server_real.launch  start.launch  start_dev.launch  start_real.launch  test.launch
challenge_demo/scripts/: create_semantics_picovoice_demo.py  demo.py  objects_publisher  publish_current_objects  start_external_object_segmentation  test_objects_publisher
challenge_demo/src/: demo.py  demo_challenge.py  demo_challenge_rgo2013.py  doorbell_listener.py  external_trigger.py  interpret_email.py  pick_place_demo.py  visualize_current_person.py  webserver.py
challenge_demo/test/: grammar_test.py  grammar_test2.py  test_object_publisher.py  test_recognition.py
challenge_dishwasher/: CMakeLists.txt  package.xml  setup.py
challenge_dishwasher/scripts/: challenge_dishwasher
challenge_eegpsr/: CMakeLists.txt  README.md  package.xml
challenge_eegpsr/data/: from-official-command-generator.txt  sentences.txt  unique-commands-first-category.txt  unique-commands-first-type.txt  unique-commands-second-type.txt  unique-commands-third-type.txt
challenge_eegpsr/src/: add_entities.py  command_recognizer.py  eegpsr.py  generate_command.py  gpsr.py  grammar.fcfg  in_room.py  test_recognition.py
challenge_eegpsr/test/: navigate_in_front_of.py
challenge_emergency/: CMakeLists.txt  README  README.txt  mainpage.dox  manifest.xml  octo_with_obs.ot  octo_with_obs_modified.ot  package.xml  pgm  start.launch  tue-manifest.xml
challenge_emergency/launch/: emergency_dependencies.launch  emergency_home_dependencies.launch  test_pdf_creator.launch
challenge_emergency/output/: map.pgm  status.txt
challenge_emergency/parameters/: parameters.yaml  parameters_rgo2014.yaml  parameters_robotics_testlab_A.yaml  parameters_rwc2013.yaml
challenge_emergency/src/: emergency.py  emergency_2014.py  pdf_create.cpp  pdf_create_home.cpp
challenge_emergency/test/: testenv_robotics_testlab_A.py  (+1 more)
challenge_final/: CMakeLists.txt  README  README.md  amigo_rviz_config.rviz  config.rviz  mainpage.dox  manifest.xml  package.xml  rviz-fuerte.vcg  sergio_rviz_config.rviz  setup.py  todo.txt
challenge_find_my_mates/: CMakeLists.txt  README.md  package.xml  setup.py
challenge_follow_me/: CMakeLists.txt  Makefile  README  manifest.xml  package.xml
challenge_following_and_guiding/: CMakeLists.txt  README.md  package.xml
challenge_gpsr/: CMakeLists.txt  README  README.md  package.xml
challenge_hand_me_that/: CMakeLists.txt  README.md  package.xml  setup.py
challenge_help_me_carry/: CMakeLists.txt  README.md  package.xml  setup.py
challenge_manipulation/: CMakeLists.txt  README.md  package.xml  requirements.txt
challenge_move_obstacles/: CMakeLists.txt  package.xml  setup.py
challenge_navigation/: CMakeLists.txt  README  README.md  log1.txt  package.xml
challenge_open/: CMakeLists.txt  README  README.md  api_ramon.txt  config.rviz  errors.txt  form.odt  form.tim  form.txt  mainpage.dox  manifest.xml  outputsomethingwentwrong.txt  package.xml  rviz-fuerte.vcg
challenge_person_recognition/: CMakeLists.txt  LOG.txt  README  README.md  output.txt  output2.txt  package.xml
challenge_presentation/: CMakeLists.txt  package.xml  setup.py
(+1554 files in other folders)
