<?xml version="1.0"?>
<package>
  <name>robot_smach_states</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>robot_skills</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ed</build_depend>
  <build_depend>docopt</build_depend>

  <run_depend>robot_skills</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>ed</run_depend>
  <run_depend>docopt</run_depend>

</package>
