<?xml version="1.0"?>
<package>
  <name>amigo_demo</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="todo@tue.nl">Loy van Beek</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>robot_skills</build_depend>
  <run_depend>robot_skills</run_depend>

  <build_depend>robot_smach_states</build_depend>
  <run_depend>robot_smach_states</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
