<?xml version="1.0"?>
<package format="2">
  <name>amigo_skills</name>
  <version>0.0.0</version>
  <description>Contains the AMIGO-specific Python interface connecting the robot smach states to the ROS environment
  </description>

  <maintainer email="PetervDooren@outlook.com">Peter van Dooren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>amigo_description</depend>
  <depend>robot_skills</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
