<?xml version="1.0"?>
<package>
  <name>challenge_basic_functionalities</name>
  <version>1.0.0</version>
  <description>The basic_functionalities challenge of RoboCup tests a couple of things any robot participating in RoboCup should be able to do:
    - navigate and avoid obstacles
    - Pick up and place something
    - Answer some predefined questions</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>robot_skills</build_depend>
  <build_depend>robot_smach_states</build_depend>
  <build_depend>rospy</build_depend>

  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>robot_skills</run_depend>
  <run_depend>robot_smach_states</run_depend>
  <run_depend>rospy</run_depend>

  <run_depend>tf</run_depend>
</package>
