<?xml version="1.0"?>
<package format="2">
  <name>challenge_carry_my_luggage</name>
  <version>0.0.0</version>
  <description>The challenge_carry_my_luggage package</description>

  <maintainer email="l.g.l.janssen@student.tue.nl">Lars Janssen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>robot_skills</depend>
  <depend>robot_smach_states</depend>
  
</package>
