<?xml version="1.0"?>
<package format="2">
  <name>challenge_cleanup</name>
  <version>0.0.0</version>
  <description>The challenge_cleanup package</description>

  <maintainer email="hvrooy@todo.todo">hvrooy</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>robocup_knowledge</depend>
  <depend>robot_skills</depend>
  <depend>robot_smach_states</depend>
  <depend>rospy</depend>

</package>
