<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>challenge_cleanup</name>
  <version>0.0.0</version>
  <description>The challenge_cleanup package</description>

  <maintainer email="hvrooy@todo.todo">hvrooy</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <depend>pykdl_ros</depend>
  <depend>robocup_knowledge</depend>
  <depend>robot_skills</depend>
  <depend>robot_smach_states</depend>
  <depend>rospy</depend>

</package>
