<?xml version="1.0"?>
<package>
  <name>challenge_cocktail_party</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="todo@tue.nl">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>robot_smach_states</build_depend>
  <run_depend>robot_smach_states</run_depend>

</package>
