<?xml version="1.0"?>
<package>
  <name>challenge_demo</name>
  <version>0.0.0</version>
  <description>The RoboCup challenge_demo challenge</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <author email="rayman747@hotmail.com">Ramon Wijnands</author>
  <author email="reinzor@gmail.com">Rein Appeldoorn</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>psi</build_depend>
  <build_depend>robot_skills</build_depend>
  <build_depend>robot_smach_states</build_depend>
  <build_depend>rospy</build_depend>

  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>psi</run_depend>
  <run_depend>robot_skills</run_depend>
  <run_depend>robot_smach_states</run_depend>
  <run_depend>rospy</run_depend>

  <run_depend>tf</run_depend>
</package>
