cmake_minimum_required(VERSION 2.8.3)
project(challenge_dishwasher)

find_package(catkin REQUIRED)

## Uncomment this if the package has a setup.py. This macro ensures
## modules and global scripts declared therein get installed
## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
# catkin_python_setup()

catkin_package()

#############
## Testing ##
#############

## Add folders to be run by python nosetests
# catkin_add_nosetests(test)
