<?xml version="1.0"?>
<package format="2">
  <name>challenge_dishwasher</name>
  <version>0.0.0</version>
  <description>The challenge_dishwasher package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>smach</depend>
  <depend>tf</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <!-- TU/e Robotics -->
  <depend>cb_planner_msgs_srvs</depend>
  <depend>robot_skills</depend>
  <depend>robot_smach_states</depend>

</package>
