<?xml version="1.0"?>
<package>
  <name>challenge_eegpsr</name>
  <version>0.0.0</version>
  <description>The challenge eegpsr package</description>

  <maintainer email="amigo@tue.nl">Rokus Ottervanger</maintainer>

  
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>robot_skills</build_depend>
  <build_depend>robot_smach_states</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>robot_skills</run_depend>
  <run_depend>robot_smach_states</run_depend>
  <run_depend>rospy</run_depend>

</package>
