<?xml version="1.0"?>
<package>
  <name>challenge_final</name>
  <version>0.0.0</version>
  <description>Final challenge RWC2019</description>

  <maintainer email="amigo@tue.nl">Tech United at Home</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>robot_skills</build_depend>
  <build_depend>robot_smach_states</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>hmi</run_depend>
  <run_depend>image_recognition_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>robot_skills</run_depend>
  <run_depend>robot_smach_states</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>

</package>
