<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>challenge_find_my_mates</name>
  <version>0.0.0</version>
  <description>The challenge_find_my_mates package</description>

  <maintainer email="j.geijsberts@student.tue.nl">Josja Geijsberts</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-matplotlib</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-matplotlib</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-sklearn</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-sklearn</depend>
  <depend>smach</depend>
  <depend>cv_bridge</depend>

  <depend>cb_base_navigation_msgs</depend>
  <depend>robot_skills</depend>
  <depend>robot_smach_states</depend>
  <depend>robocup_knowledge</depend>

</package>
