<?xml version="1.0"?>
<package>
  <name>challenge_help_me_carry</name>
  <version>0.0.0</version>
  <description>Help-me-carry challenge</description>

  <maintainer email="amigo@tue.nl">Loy van Beek</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>robot_skills</build_depend>
  <run_depend>robot_skills</run_depend>

  <build_depend>robot_smach_states</build_depend>
  <run_depend>robot_smach_states</run_depend>

</package>
