<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>challenge_help_me_carry</name>
  <version>0.0.0</version>
  <description>Help-me-carry challenge</description>

  <maintainer email="amigo@tue.nl">Loy van Beek</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>robot_skills</build_depend>
  <exec_depend>robot_skills</exec_depend>

  <build_depend>robot_smach_states</build_depend>
  <exec_depend>robot_smach_states</exec_depend>

</package>
