<?xml version="1.0"?>
<package>
  <name>challenge_manipulation</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>robot_skills</run_depend>
  <run_depend>robot_smach_states</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-xhtml2pdf</run_depend>

</package>
